feat(MyLotto): 구매한 로또 리스트를 반환한다